# vraygolaem_max

./: .gitignore  CMakeLists.txt  cmake_vrayGolaemMax.bat  instance.cpp  instance.h  license.txt  pluginenumcallbacks.h  readme.txt  resource.h  vraygolaem.cpp  vraygolaem.dsp  vraygolaem.h  vraygolaem.rc  vraygolaem_vlado_vc10.vcxproj
vrayGolaem/: CMakeLists.txt  glm_crowd.h  glm_crowd_io.h  instance.cpp  instance.h  json.h  miniz.c  pluginenumcallbacks.h  resource.h  vraygolaem.cpp  vraygolaem.h  vraygolaem.py  vraygolaem.rc  vrender.h
vrayGolaem/_shared/: instance.cpp  instance.h  resource.h  vraygolaem.cpp  vraygolaem.h  vraygolaem.rc
vrayGolaem/vray40/: CMakeLists.txt
vrayGolaem/vray50/: CMakeLists.txt
vrayGolaemHSL/: CMakeLists.txt  vraygolaemHSL.cpp  vraygolaemHSL.h  vraygolaemHSL.rc  vraygolaemHSL_impl.h
vrayGolaemHSL/_shared/: resource.h  vraygolaemHSL.cpp  vraygolaemHSL.h
vrayGolaemHSL/vray40/: CMakeLists.txt
vrayGolaemHSL/vray50/: CMakeLists.txt
vrayGolaemSwitch/: CMakeLists.txt  resource.h  vraydirt.cpp  vraydirt_impl.h  vraygolaemSwitch.cpp  vraygolaemSwitch.h  vraygolaemSwitch.rc  vraygolaemSwitch_impl.h
vrayGolaemSwitch/_shared/: resource.h  vraygolaemSwitch.cpp  vraygolaemSwitch.h
vrayGolaemSwitch/vray40/: CMakeLists.txt
vrayGolaemSwitch/vray50/: CMakeLists.txt
